basic frontend, redux, user auth and checklist

--- a/Client/src/components/navbar/navbar.module.css
+++ b/Client/src/components/navbar/navbar.module.css
@@ -1,16 +1,21 @@
 .nav{
-    position: absolute;
+    display: flex;
+    justify-content: space-between;
     height: 70px;
     width: 100%;
     background-color: #000000;
-    z-index: 102;
+    color: white;
 }
 .logoDiv{
     height: 100%;
-    width: 100px;
     margin-left: 50px;
+    width: 300px;
 }
 .logo{
     height: 100%;
     margin: auto;
+}
+.user{
+    margin-right: 50px;
+    cursor: pointer;
 }
