--- a/Client/src/components/Dashboard/Dashboard.module.css
+++ b/Client/src/components/Dashboard/Dashboard.module.css
@@ -17,23 +17,38 @@ html{
     position: absolute;
     z-index: 100;
     height: 450px;
-    width: 200px;
-    background-color: rgb(58, 58, 58);
+    width: 70px;
+    background-color: rgb(37, 37, 37);
     top: 100px;
     border-radius: 0 8px 8px 0;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    color: white;
+    transition: ease-in-out .3s;
+}
+.sidebarDiv:hover .siderbarOption{
+    width: 100%;
+    display: block;
+}
+.sidebarDiv:hover{
+    width: 190px;
+}
+.siderbarOption{
+    display: none;
 }
 .kanbanOption{
+    border-radius: 5px;
     height: 50px;
     width: 80%;
     margin: 10px auto;
-    background-color: antiquewhite;
+    background-color: rgb(29, 29, 29);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
 }
 .focusSessions{
-    /* position: absolute; */
     height: 250px;
-    width: 400px;
+    width: 35%;
     background-color: rgb(58, 58, 58);
     right: 50px;
     top: 100px;
@@ -59,28 +74,31 @@ html{
 .kanbanBoarddiv{
     /* position: absolute; */
     height: 250px;
-    width: 500px;
+    width: 55%;
     top: 100px;
     background-color: #0f0f0f;
     left: 250px;
     border-radius: 10px;
     margin: 0 15px;
-    
+    display: flex;
 }
 .checklistDiv{
     /* position: absolute; */
     height: 250px;
-    width: 350px;
+    width: 35%;
     bottom: 5px;
     left: 250px;
     border-radius: 10px;
     background-color: #0f0f0f;
     margin: 0 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .musicDiv{
     /* position: absolute; */
     height: 250px;
-    width: 500px;
+    width: 55%;
     bottom: 5px;
     right: 50px;
     border-radius: 10px;
@@ -99,3 +117,25 @@ html{
     top: 80px;
     left: 230px;
 }
+/* ICONS STYLE */
+
+.icon{
+    margin: 8px;
+}
+
+/* Music Toggle Div */
+ .MusicToggle{
+    height: 50px;
+    width: 50px;
+    z-index: 101;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    background-color: #0f0f0f;
+    border-radius: 20px 0px 0px 20px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+ }
