--- a/Client/src/components/Dashboard/Dashboard.module.css
+++ b/Client/src/components/Dashboard/Dashboard.module.css
@@ -46,6 +46,18 @@ html{
     display: flex;
     align-items: center;
 }
+.settingoption{
+    border-radius: 5px;
+    height: 50px;
+    width: 80%;
+    margin: 10px auto;
+    background-color: rgb(29, 29, 29);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    margin-top: 150px;
+}
 .focusSessions{
     height: 250px;
     width: 35%;
