--- a/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
+++ b/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
@@ -9,6 +9,21 @@
     width: 80%;
     top: 80px;
     left: 230px;
+    align-content: center;
+    justify-content: center;
+}
+
+.iconsPause, .iconsResume, .iconsReset{
+    color: white;
+}
+.iconsResume:hover{
+    color: rgb(0, 177, 0);
+}
+.iconsPause:hover{
+    color: orange;
+}
+.iconsReset:hover{
+    color: red;
 }
 
 .checklistDiv{
@@ -46,14 +61,37 @@
     border-radius: 10px;
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .timer{
     font-size: 70px;
 }
-.day{
+.remaining{
     font-size: 20px;
+    margin-top: 35px;
 }
-
+.FocusOptions{
+    color: white;
+    display: flex;
+    flex-direction: row;
+}
+.FocusSessionSettings{
+    display: flex;
+    flex-direction: row;
+}
+.SessionsLimit{
+    margin: 0 10px;
+    background-color: #1b1b1b;
+    color: white;
+    border: none;
+    font-family: Silkscreen, sans-serif;
+}
+.Sessions{
+    margin: 0 10px;
+    font-family: Silkscreen, sans-serif;
+}
 
 /* CHECKLIST */
 .checklist{
