--- a/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
+++ b/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
@@ -9,6 +9,8 @@
     width: 80%;
     top: 80px;
     left: 230px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .checklistDiv{
@@ -82,6 +84,9 @@
     height: 450px;
     width: 33.3%;
     border-radius: 10px 0px 0px 10px;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 .doin_Div{
     /* background-color: aquamarine; */
@@ -174,4 +179,14 @@
   padding: 0px 15px;
   color: white;
   outline: none;
+}
+.TaskList{
+    padding: 3px;
+    transition: background-color 0.2s ease;
+    flex-grow: 1;
+    min-height: 100px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
