--- a/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
+++ b/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
@@ -204,11 +204,11 @@
     bottom: 30px;
 }
 .inputAddFeild{
-  height: 60%;
+  height: 40px;
   width: 85%;
   background: rgb(34, 34, 34);
   border: none;
-  border-radius: 15px;
+  border-radius: 10px;
   padding: 0px 15px;
   color: white;
   outline: none;
