--- a/Client/src/components/Dashboard/Dashboard.module.css
+++ b/Client/src/components/Dashboard/Dashboard.module.css
@@ -11,6 +11,7 @@ html{
 
 .bg_image {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 .sidebarDiv{
@@ -129,6 +130,16 @@ html{
     top: 80px;
     left: 230px;
 }
+
+/* Table Media Query */
+@media only screen and (max-width: 1100px) {
+    .mainBody{
+        width: 90%;
+        top: 80px;
+        left: 100px;
+    }
+}
+
 /* ICONS STYLE */
 
 .icon{
