--- a/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
+++ b/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
@@ -12,6 +12,14 @@
     align-content: center;
     justify-content: center;
 }
+/* Table Media Query */
+@media only screen and (max-width: 1100px) {
+    .mainBody{
+        width: 90%;
+        top: 80px;
+        left: 70px;
+    }
+}
 
 .iconsPause, .iconsResume, .iconsReset{
     color: white;
