--- a/Client/src/components/Dashboard/MainBody/Pages/overview/components/components.module.css
+++ b/Client/src/components/Dashboard/MainBody/Pages/overview/components/components.module.css
@@ -15,21 +15,26 @@
     overflow-y: scroll;
 }
 .checklist{
-    height: 40px;
+    height: fit-content;
     width: 90%;
+    padding: 5px 0;
     margin: 5px 0;
     border-radius: 5px;
     font-size: 18px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     background-color: rgb(29, 29, 29);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
     color: white;
+    position: relative;
 }
 .checkList_list_content{
     display: flex;
-    justify-content: space-evenly;
+    width: 80%;
+}
+.optionsChecklist{
+    position: absolute;
+    right: 0;
 }
 .MdDelete:hover{
     color: red;
@@ -38,6 +43,19 @@
 .MdEdit:hover{
     color: greenyellow;
     cursor: pointer;
+}
+.EditTitle{
+    height: 30px;
+    background-color: #2f2f2f;
+    color: white;
+    border: none;
+    border-bottom-style: outset;
+    margin: 0 10px;
+    width: 315px;
+    border-radius: 1px;
+}
+.EditTitle:focus{
+    outline: none;
 }
 /* KARBAN BOARD */
 
