--- a/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
+++ b/Client/src/components/Dashboard/MainBody/Pages/Pages.module.css
@@ -12,14 +12,6 @@
     align-content: center;
     justify-content: center;
 }
-/* Table Media Query */
-@media only screen and (max-width: 1100px) {
-    .mainBody{
-        width: 90%;
-        top: 80px;
-        left: 70px;
-    }
-}
 
 .iconsPause, .iconsResume, .iconsReset{
     color: white;
@@ -221,3 +213,37 @@
   color: white;
   outline: none;
 }
+
+@media only screen and (max-width: 767px) {
+    .focusSessions{
+        width: 65vw !important;
+        margin: 15px 0 !important;
+        margin-bottom: 15vh!important;
+    }
+    .timer{
+        font-size: larger;
+    }
+    .mainBody{
+        width: 80%;
+        top: 80px;
+        left: 65px;
+    }
+    .todo_Div_title{
+        font-size: medium;
+    }
+    .done_Div_title{
+        font-size: medium;
+    }
+    .doin_Div_title{
+        font-size: medium;
+    }
+  }
+
+  /* Table Media Query */
+/* @media only screen and (max-width: 1100px) {
+    .mainBody{
+        width: 90%;
+        top: 80px;
+        left: 55px;
+    }
+} */
