--- a/Client/src/components/navbar/navbar.module.css
+++ b/Client/src/components/navbar/navbar.module.css
@@ -19,3 +19,19 @@
     margin-right: 50px;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 767px) {
+    .logoDiv{
+        margin-left: 0px !important;
+        display: flex;
+    }
+    .logo{
+        height: 70% !important;
+    }
+    .user{
+        margin-right: 20px !important;
+        display: flex;
+        align-items: center;
+    
+    }
+  }
