--- a/Client/src/components/Dashboard/sideBar/sidebar.module.scss
+++ b/Client/src/components/Dashboard/sideBar/sidebar.module.scss
@@ -83,7 +83,7 @@ $box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
   margin-top: 150px;
   @media (max-width: 550px) {
     margin-top: 0px;
-    margin: 10px 10px;
+    margin: 10px auto;
   }
 }
 
