--- a/Client/src/components/Dashboard/sideBar/sidebar.module.scss
+++ b/Client/src/components/Dashboard/sideBar/sidebar.module.scss
@@ -50,13 +50,13 @@ $box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
     height: 70px;
     width: 80%;
     display: flex;
-    top: 90%;
+    top: 85%;
     left: 10%;
     border-radius: 8px;
     padding: 0px 10px;
 
     &:hover {
-        width: fit-content;
+        width: 80%;
     
         .siderbarOption {
           width: 100%;
