--- a/Client/src/components/Dashboard/MainBody/widgets/scss/_BasicInfo.scss
+++ b/Client/src/components/Dashboard/MainBody/widgets/scss/_BasicInfo.scss
@@ -2,13 +2,27 @@
     height: 50px;
     color: white;
 }
-.div_basicinfo{
+.title_{
     height: 100%;
-    width: 100%;
+    width: 95%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-left: 5%;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.div_basicinfo{
+    margin-left: 10%;
+}
+.title_bg{
+    height: 100%;
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0px;
     font-size: 20px;
     font-weight: 600;
 }
