Feature: Server[Mono] and Client Changes [ settings ]

--- a/Client/src/components/Dashboard/MainBody/widgets/widget.module.scss
+++ b/Client/src/components/Dashboard/MainBody/widgets/widget.module.scss
@@ -2,6 +2,9 @@
 @import './scss/_taskOption.scss';
 @import './scss/_Settings.scss';
 @import './scss/_BasicInfo.scss';
+@import './scss/_input.scss';
+@import './scss/_submit.scss';
+@import './scss/_colorPicker.scss';
 
 .center_div_flex {
     display: flex;
