--- a/Client/src/components/navbar/navbar.module.css
+++ b/Client/src/components/navbar/navbar.module.css
@@ -18,6 +18,7 @@
 .user{
     margin-right: 50px;
     cursor: pointer;
+    display: flex;
 }
 
 @media only screen and (max-width: 767px) {
@@ -32,6 +33,6 @@
         margin-right: 20px !important;
         display: flex;
         align-items: center;
-    
+        font-size: 10px;
     }
   }
