--- a/Client/src/components/Dashboard/MainBody/widgets/widget.module.scss
+++ b/Client/src/components/Dashboard/MainBody/widgets/widget.module.scss
@@ -6,10 +6,19 @@
 @import './scss/_submit.scss';
 @import './scss/_colorPicker.scss';
 
+
 .center_div_flex {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.flexwarp_container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.flex_direaction_vertical_container {
+    display: flex;
+    flex-direction: column;
 }
 .NavOptions_div{
     height: 250px;
