--- a/Client/src/components/Home/home.module.scss
+++ b/Client/src/components/Home/home.module.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Boogaloo&display=swap');
 
+
 .section1{
     display: flex;
     height: 600px;
@@ -92,4 +93,76 @@
     font-family: "Boogaloo", sans-serif;
     margin: 0 30px;
     font-size: 20px;
+}
+.mobileHOMESVG{
+    display: none;
+}
+
+.consistentSVG{
+    height: 80%;
+    margin: 0px 50px ;
+}
+
+.clockSVG{
+    height: 80%;
+    margin: 0px 50px ;
+}
+
+.targetSVG {
+    height: 80%;
+    margin: 0px 50px ;
+}
+@media only screen and (max-width: 1000px) {
+    .titleDiv {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 20px;   
+    }
+    .title {
+        font-family: "Boogaloo", sans-serif;
+        font-weight: 00;
+        font-size: 40px;
+    }
+    .bgImage{
+        display: none;
+    }
+    .mobileHOMESVG{
+        display: initial;
+        max-height: 400px;
+    }
+    .section2_block1{
+        height: fit-content;
+        width: 90%;
+        flex-direction: column;
+    }
+    .consistentSVG{
+        width: 300px;
+        margin: 0px 0px 10px 0px;
+    }
+    .section2_block1_text {
+        font-size: 35px;
+        width: 100%;
+    }
+    .section2_block2{
+        height: fit-content;
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .section2_block2_minBlock1{
+        height: fit-content;
+        width: 90%;
+        flex-direction: column;
+    }
+    .clockSVG{
+        width: 30%;
+        margin: 0px 0px 10px 0px;
+    }
+    
+    .targetSVG {
+        width: 30%;
+        margin: 0px 0px 10px 0px;
+    }
 }
